src/kubernetes/nginx-gateway/manifests/nginx-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: default
  name: nginx
spec:
  hostnames:
  - "nginx.valhallahub.nl"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx
    namespace: nginx-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: nginx
      namespace: default
      port: 80
      weight: 1
